# razortrade

./: .gitignore  AUDIT_2026_04_20.md  Cargo.toml  DROP_18_DEPLOY.md  DROP_19_DEPLOY.md  DROP_19_TODO.md  HANDOVER_FOR_GEMINI.md  README.md  SESSION_CLOSEOUT.md  tatus --short
backups/: README.md
crates/rt-core/: Cargo.toml
crates/rt-core/src/: execution_mode.rs  instrument.rs  instrument_registry.rs  lib.rs  market_data.rs  order.rs  portfolio.rs  position.rs  signal.rs  time.rs
crates/rt-daemon/: Cargo.toml
crates/rt-daemon/src/: equity_writer.rs  fill_reconciler.rs  main.rs  market_data.rs  periodic_reconciler.rs  portfolio_loader.rs  signal_processor.rs
crates/rt-dashboard/: Cargo.toml
crates/rt-dashboard/src/: index.html  main.rs
crates/rt-execution/: Cargo.toml
crates/rt-execution/src/: lib.rs
crates/rt-kraken-futures/: Cargo.toml
crates/rt-kraken-futures/src/: accounts.rs  auth.rs  lib.rs  messages.rs  orderbook.rs  private_state.rs  rest.rs  ws.rs
crates/rt-persistence/: Cargo.toml
crates/rt-persistence/migrations/: 20260101000001_initial_schema.sql  20260419000002_nav_tracking.sql  20260419000003_dry_run_orders.sql  20260419000004_positions_btc_pnl.sql  20260419000005_applied_fills.sql  20260420000001_orders_cli_ord_id.sql  20260420000002_signals_expires_at.sql  20260420000003_drop19_uncertain_status.sql
crates/rt-persistence/src/: lib.rs  models.rs  repo.rs
crates/rt-risk/: Cargo.toml
crates/rt-risk/src/: checklist.rs  kill_switch.rs  lib.rs  position_sizing.rs
crates/rt-risk/src/checks/: duplicate_position.rs  funding_rate.rs  hard_limit.rs  liquidation_distance.rs  mod.rs  notional_cap.rs  spread_liquidity.rs  staleness.rs  volatility.rs
deploy/: HETZNER-SETUP.md  daemon.toml.example  daemon.toml.local  daemon.toml.local.example  hetzner-cloud-init.yml  razortrade-backup-pull.service  razortrade-backup-pull.timer
deploy/systemd/: razortrade.service
docs/: ARCHITECTURE.md  BUILDING.md  OPERATIONS.md  SECRETS.md
packaging/: Caddyfile  README.md  oauth2-proxy.cfg  oauth2-proxy.service  razortrade-backup.service  razortrade-backup.timer  razortrade-exits.service  razortrade-exits.timer  razortrade-prune.service  razortrade-prune.timer  razortrade-signals.service  razortrade-signals.timer  rt-daemon.service  rt-dashboard.service
tools/: dashboard-auth-setup.sh  donchian_exit.py  donchian_signal.py  indicators.py  inject_test_signal.py  offsite-push.sh  prune-equity-snapshots.sh  pull-backups-from-prod.sh  reset-killswitch.sh  sqlite-backup.sh
var/: razortrade.sqlite-shm  razortrade.sqlite-wal
