[workspace]
resolver = "2"
members = [
    "crates/rt-core",
    "crates/rt-risk",
    "crates/rt-persistence",
    "crates/rt-execution",
    "crates/rt-kraken-futures",
    "crates/rt-daemon",
    "crates/rt-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Walid <private>"]
license = "Proprietary"
repository = "private"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Numeric
rust_decimal = { version = "1.35", features = ["serde-with-str"] }

# Persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# HTTP / WS (for broker clients, later)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }

# Crypto (API signing)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }

# Testing
tokio-test = "0.4"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
