[package]
name = "rt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
