[package]
name = "rt-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rt-daemon"
path = "src/main.rs"

[dependencies]
rt-core = { path = "../rt-core" }
rt-risk = { path = "../rt-risk" }
rt-persistence = { path = "../rt-persistence" }
rt-execution = { path = "../rt-execution" }
rt-kraken-futures = { path = "../rt-kraken-futures" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
config = { workspace = true }
