[package]
name = "rt-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "razortrade algorithmic trading daemon"
license.workspace = true

[[bin]]
name = "rt-daemon"
path = "src/main.rs"

[dependencies]
rt-core = { path = "../rt-core" }
rt-risk = { path = "../rt-risk" }
rt-persistence = { path = "../rt-persistence" }
rt-execution = { path = "../rt-execution" }
rt-kraken-futures = { path = "../rt-kraken-futures" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
config = { workspace = true }

# ============================================================================
# RPM packaging (cargo-generate-rpm)
# ============================================================================
#
# Build an RPM:
#     cargo build --release -p rt-daemon
#     cargo generate-rpm -p crates/rt-daemon
#
# Asset source paths are relative to the crate directory (where this
# Cargo.toml lives), so the workspace's target/ dir is ../../target/.
[package.metadata.generate-rpm]
name = "rt-daemon"
summary = "razortrade algorithmic trading daemon"
# Disable /bin/sh auto-dependency since our scriptlets are trivial.
# shadow-utils and systemd are declared explicitly below.
assets = [
    { source = "../../target/release/rt-daemon", dest = "/usr/bin/rt-daemon", mode = "0755" },
    { source = "../../packaging/rt-daemon.service", dest = "/usr/lib/systemd/system/rt-daemon.service", mode = "0644" },
    { source = "../../packaging/daemon.toml", dest = "/etc/razortrade/daemon.toml", mode = "0640", user = "root", group = "razortrade", config = true, config_noreplace = true },
    { source = "../../packaging/README.md", dest = "/usr/share/doc/razortrade/README.md", mode = "0644", doc = true },
    # --- Drop 13: Donchian signal generator --------------------------------
    # Python helper scripts + systemd timer. stdlib-only, so no pip deps.
    # The scripts share the rt-daemon RPM rather than being split off into
    # a separate package because the coupling is hard: they write into the
    # daemon's SQLite database using schemas shipped with the daemon
    # migrations. Separating would mean version skew could silently break
    # signal generation.
    { source = "../../tools/donchian_signal.py", dest = "/usr/libexec/razortrade/donchian_signal.py", mode = "0755" },
    { source = "../../tools/indicators.py", dest = "/usr/libexec/razortrade/indicators.py", mode = "0644" },
    { source = "../../packaging/razortrade-signals.service", dest = "/usr/lib/systemd/system/razortrade-signals.service", mode = "0644" },
    { source = "../../packaging/razortrade-signals.timer", dest = "/usr/lib/systemd/system/razortrade-signals.timer", mode = "0644" },
    # --- Drop 14: SQLite backup --------------------------------------------
    # Daily snapshot via sqlite3 .backup (online-safe). Rotates local
    # copies at 7 days. ThinkStation pulls separately — see
    # deploy/razortrade-backup-pull.*.
    { source = "../../tools/sqlite-backup.sh", dest = "/usr/libexec/razortrade/sqlite-backup.sh", mode = "0755" },
    { source = "../../tools/offsite-push.sh", dest = "/usr/libexec/razortrade/offsite-push.sh", mode = "0755" },
    { source = "../../packaging/razortrade-backup.service", dest = "/usr/lib/systemd/system/razortrade-backup.service", mode = "0644" },
    { source = "../../packaging/razortrade-backup.timer", dest = "/usr/lib/systemd/system/razortrade-backup.timer", mode = "0644" },
]

pre_install_script = '''
getent group razortrade >/dev/null || groupadd -r razortrade
getent passwd razortrade >/dev/null || \
    useradd -r -g razortrade -d /var/lib/razortrade -s /sbin/nologin \
        -c "razortrade trading daemon" razortrade
exit 0
'''

post_install_script = '''
systemctl daemon-reload >/dev/null 2>&1 || :
# Deliberately do NOT enable or start the daemon or timers. Operator
# must provision credentials first, then:
#   systemctl enable --now rt-daemon.service
#   systemctl enable --now razortrade-signals.timer
#   systemctl enable --now razortrade-backup.timer
exit 0
'''

pre_uninstall_script = '''
if [ "$1" = "0" ]; then
    systemctl --no-reload disable --now razortrade-backup.timer >/dev/null 2>&1 || :
    systemctl --no-reload disable --now razortrade-signals.timer >/dev/null 2>&1 || :
    systemctl --no-reload disable --now rt-daemon.service >/dev/null 2>&1 || :
fi
exit 0
'''

post_uninstall_script = '''
systemctl daemon-reload >/dev/null 2>&1 || :
# User/group and /var/lib/razortrade are deliberately NOT removed.
# See README for manual cleanup instructions.
exit 0
'''

[package.metadata.generate-rpm.requires]
systemd = "*"
shadow-utils = "*"
