[package]
name = "rt-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rt-core = { path = "../rt-core" }
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
