[package]
name = "rt-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rt-core = { path = "../rt-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
